--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@radix-ui/react-toggle": "^1.0.3",
     "@radix-ui/react-tooltip": "^1.0.7",
     "@t3-oss/env-nextjs": "^0.7.1",
+    "@tailwindcss/typography": "^0.5.10",
     "@tanstack/react-query": "^4.36.1",
     "@trpc/client": "^10.43.6",
     "@trpc/next": "^10.43.6",
@@ -48,14 +49,13 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cmdk": "^0.2.0",
-    "contentlayer": "^0.3.4",
     "date-fns": "^3.2.0",
     "embla-carousel-react": "8.0.0-rc19",
     "lucide-react": "^0.311.0",
     "nanoid": "^5.0.4",
     "next": "^14.0.4",
     "next-auth": "^4.24.5",
-    "next-contentlayer": "^0.3.4",
+    "next-mdx-remote": "^4.4.1",
     "next-themes": "^0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -63,10 +63,13 @@
     "react-intersection-observer": "^9.5.3",
     "server-only": "^0.0.1",
     "sonner": "^1.3.1",
+    "sugar-high": "^0.5.6",
     "superjson": "^2.2.1",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
     "use-debounce": "^10.0.0",
+    "vfile": "^6.0.1",
+    "vfile-matter": "^5.0.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
