--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "build": "contentlayer build && next build",
+    "build": "next build",
     "start": "next start",
     "dev": "next dev",
     "typecheck": "tsc --noEmit",
