--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "cmdk": "^0.2.0",
     "date-fns": "^3.2.0",
     "embla-carousel-react": "8.0.0-rc19",
+    "framer-motion": "^11.0.3",
     "lucide-react": "^0.311.0",
     "nanoid": "^5.0.4",
     "next": "^14.0.4",
